<resources>
    <string name="app_name">Submit.io</string>
    <string name="save_txt">Save</string>
    <string name="logout_txt">Logout</string>
    <string name="welcome_back_admin_txt">Welcome Back, Admin</string>
    <string name="back_txt">Back</string>
    <string name="applied_exams_txt">Applied Exams</string>
    <string name="awards_and_achievements_txt">Awards and Achievements</string>
    <string name="title_txt">Title</string>
    <string name="issuer_txt">Issuer</string>
    <string name="awarded_date_txt">Awarded Date</string>
    <string name="education_level_txt">Education Level</string>
    <string name="course_txt">Course/Degree</string>
    <string name="college_school_txt">College/School Name</string>
    <string name="from_txt">From(YYYY)</string>
    <string name="to_txt">To(YYYY)</string>
    <string name="percentage_cgpa_txt">Percentage/CGPA</string>
    <string name="education_txt">Education</string>
    <string name="user_name_txt">User Name</string>
    <string name="welcome_txt">Welcome,</string>
    <string name="search_for_a_exam_txt">Search for an exam</string>
    <string name="recommended_forms_txt">Recommended Forms</string>
    <string name="view_applied_forms_txt">View Applied Forms</string>
    <string name="view_profile_txt">View Profile</string>
    <string name="please_wait_txt">Please Wait...</string>
    <string name="app_logo_txt">App logo</string>
    <string name="select_login_type_txt">Select Login Type</string>
    <string name="login_as_user_txt">Login as User</string>
    <string name="upload_a_new_form_txt">Upload a New Form</string>
    <color name="iconColor">#4CAF50</color>
    <string-array name="gender">
        <item>Male</item>
        <item>Female</item>
        <item>Others</item>
    </string-array>
    <string-array name="status">
        <item>Live</item>
        <item>Upcoming</item>
        <item>Expired</item>
    </string-array>
    <string-array name="education_level">
        <item>School</item>
        <item>College</item>
    </string-array>
    <string-array name="category">
        <item>Engineering</item>
        <item>Medical</item>
        <item>Civil Services</item>
        <item>Law</item>
        <item>Design Courses</item>
        <item>Hotel Management</item>
        <item>National Defence Academy</item>
        <item>Indian Statistical Service</item>
    </string-array>
    <string-array name="state">
        <item>Andhra Pradesh</item>
        <item>Arunachal Pradesh</item>
        <item>Assam</item>
        <item>Bihar</item>
        <item>Chhattisgarh</item>
        <item>Goa</item>
        <item>Gujarat</item>
        <item>Haryana</item>
        <item>Himachal Pradesh</item>
        <item>Jammu and Kashmir</item>
        <item>Jharkhand</item>
        <item>Karnataka</item>
        <item>Kerala</item>
        <item>Madhya Pradesh</item>
        <item>Maharashtra</item>
        <item>Manipur</item>
        <item>Meghalaya</item>
        <item>Mizoram</item>
        <item>Nagaland</item>
        <item>Odisha</item>
        <item>Punjab</item>
        <item>Rajasthan</item>
        <item>Sikkim</item>
        <item>Tamil Nadu</item>
        <item>Telangana</item>
        <item>Tripura</item>
        <item>Uttar Pradesh</item>
        <item>Uttarakhand</item>
        <item>West Bengal</item>
    </string-array>

    <string-array name="proficiency">
        <item>Beginner</item>
        <item>Intermediate</item>
        <item>Advanced</item>
        <item>Native</item>
    </string-array>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="exam_category_txt">Exam Category</string>
    <string name="form_status_txt">Form Status</string>
    <string name="live_txt">Live</string>
    <string name="upcoming_txt">Upcoming</string>
    <string name="expired_txt">Expired</string>
    <string name="all_forms_txt">All Forms</string>
</resources>