<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="4dp"
    android:background="@color/backgroundColor"
    tools:context=".user.userFormFragment.UserFormFragment">

    <ImageView
        android:id="@+id/profile_pic"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="12dp"
        android:contentDescription="@string/view_profile_txt"
        android:scaleType="centerCrop"
        android:src="@mipmap/ic_launcher"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/hello_txt"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginStart="12dp"
        android:text="@string/welcome_txt"
        android:textColor="@color/white"
        app:layout_constraintStart_toEndOf="@id/profile_pic"
        app:layout_constraintTop_toTopOf="@id/profile_pic"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginStart="12dp"
        android:text="@string/user_name_txt"
        android:textStyle="bold"
        android:textColor="@color/white"
        app:layout_constraintStart_toEndOf="@id/profile_pic"
        app:layout_constraintTop_toBottomOf="@id/hello_txt"
        tools:ignore="TextSizeCheck" />

    <!--    <ImageView-->
    <!--        android:id="@+id/notification"-->
    <!--        android:layout_width="40dp"-->
    <!--        android:layout_height="40dp"-->
    <!--        android:layout_gravity="center"-->
    <!--        android:layout_marginEnd="12dp"-->
    <!--        android:src="@drawable/notification_icon"-->
    <!--        app:layout_constraintBottom_toBottomOf="@id/profile_pic"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintTop_toTopOf="@id/profile_pic" />-->


    <ImageView
        android:id="@+id/login_icon"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/logout_txt"
        android:src="@drawable/logout_icon"
        app:layout_constraintBottom_toBottomOf="@id/profile_pic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/profile_pic"
        app:tint="@color/red"
        tools:ignore="ImageContrastCheck" />

    <EditText
        android:id="@+id/search"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="12dp"
        android:background="@drawable/searchview"
        android:drawableStart="@drawable/search_icon"
        android:focusable="false"
        android:hint="@string/search_for_a_exam_txt"
        android:textColorHint="@color/searchBarTextColor"
        android:importantForAutofill="no"
        android:drawableTint="@color/searchBarTextColor"
        android:inputType="none"
        android:paddingStart="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_pic" />

    <TextView
        android:id="@+id/recommendation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="2dp"
        android:text="@string/recommended_forms_txt"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/secondaryText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/search" />

    <TextView
        android:id="@+id/recommendation_see_all"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="8dp"
        android:text="See All"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="#64B5F6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/search" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_recommendation"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/recommendation"
        tools:listitem="@layout/recommendation_card_form_rv_items" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/categories_list_recyclerview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="4dp"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/recycler_recommendation"
        tools:listitem="@layout/categories_rv_item" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_all"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@id/adView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/categories_list_recyclerview"
        tools:listitem="@layout/card_form_rv_item" />

    <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-2095090407853200/8424341037"
        ads:layout_constraintBottom_toBottomOf="parent"
        ads:layout_constraintEnd_toEndOf="parent"
        ads:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>

